# SDL_Bobri

./: CMakeLists.txt  README.md  build.sh  leaderboard.skibidiuwu  main.c
lib/bulletsmgr/: bulletsmgr.c  bulletsmgr.h
lib/buttonmgr/: buttonmgr.c  buttonmgr.h
lib/gamemgr/: gamemgr.c  gamemgr.h
lib/playermgr/: playermgr.c  playermgr.h
lib/screenmgr/: screenmgr.c  screenmgr.h
lib/screens/: mainmenu.c  mainmenu.h
lib/screens/endgame/: endgame.c  endgame.h
lib/screens/ingame/: ingame.c  ingame.h
lib/screens/leaderboard/: leaderboard.c  leaderboard.h
lib/screens/mainmenu/: mainmenu.c  mainmenu.h
lib/screens/settings/: settings.c  settings.h
lib/textmgr/: textmgr.c  textmgr.h
lib/upgrademgr/: upgrademgr.c  upgrademgr.h
lib/wallsmgr/: wallsmgr.c  wallsmgr.h
utils/colors/: colors.c  colors.h
utils/fileleaderboard/: fileleaderboard.c  fileleaderboard.h
utils/imgrender/: imgrender.c  imgrender.h
utils/textrender/: textrender.c  textrender.h
